fix: #19653, Fix a stat tables alignment issue

--- a/src/main/resources/public/sass/global/_exercizer-specifics.scss
+++ b/src/main/resources/public/sass/global/_exercizer-specifics.scss
@@ -715,7 +715,6 @@ body.exercizer {
       overflow:auto;
       overflow-x:hidden;
       display:block;
-      margin-right:-30px;
     }
   }
   .small-cell {
